...
        android:layout_column="0"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/radioButtonLabel" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="0"
        android:layout_column="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill"
        android:text="@string/checkboxLabel" />

    <Switch
        android:id="@+id/switchToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:text="@string/switchLabel"
        android:layout_columnWeight="1"
        android:layout_gravity="fill" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="1"
        app:srcCompat="@android:drawable/ic_menu_camera"
        android:layout_columnWeight="1"
...
